# lazarus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/controllers/: boardController.cpp  boardController.h  taskController.cpp  taskController.h
src/db/: boardRepository.cpp  boardRepository.h  db.cpp  db.h
src/models/: Board.h  board.h  list.h  task.h  user.h
src/routes/: middleware.cpp  router.cpp  router.h
src/services/: boardService.cpp  boardService.h
src/utils/: utils.cpp
test/: CMakeLists.txt  test_main.cpp
test/services/: test_boardService.cpp
